--- a/index.css
+++ b/index.css
@@ -2,3 +2,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main > svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Landscape orientation: height is the limiting factor */
+@media (min-aspect-ratio: 1/1) {
+  main > svg {
+    height: 100%;
+    width: auto;
+  }
+}
+
+/* Portrait orientation: width is the limiting factor */
+@media (max-aspect-ratio: 1/1) {
+  main > svg {
+    width: 100%;
+    height: auto;
+  }
+}
